fix wechat layout bug

--- a/Resume/index.scss
+++ b/Resume/index.scss
@@ -9,6 +9,7 @@ $seconday-text-color: #ffffff;
 html,
 body {
     height: 100%;
+    overflow: hidden;
 }
 
 body {
